# vkImageProcessing

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  genshader.ps1  haskell-gen.cabal  main.cpp  stack.yaml  vcpkg.json
app/: Main.hs
lib/: CMakeLists.txt
lib/Base/: CMakeLists.txt
lib/Base/include/: Base.hpp  Base_impl.h  Base_impl.hpp  Context.h  Context.hpp  GPUCommandAsync.hpp  v2api.h
lib/Base/src/: Base.cpp  Context.cpp
lib/ImageProcessing/: CMakeLists.txt
lib/ImageProcessing/include/: GuidedFilterHelpers.h  GuidedFilterHelpers.hpp  IntegralImageHelpers.h  highlevelhelpers.h  v2utils.h
lib/ImageProcessing/src/: GuidedFilterHelpers.cpp  highlevelhelpers.cpp
lib/ShaderCollection/: CMakeLists.txt
lib/ShaderCollection/include/: ShadersCollection.h
lib/ShaderCollection/include/shaders/: common.h  prefixSum.h  sweepPhases.h
lib/ShaderCollection/src/: ShadersCollection.cpp
lib/ShaderCollection/src/shaders/: averagingISqI.glsl  copy.glsl  guidedFilterFinal.glsl  guidedFilterPass2.glsl  guidedfilterPass1.glsl  horizontalSumation.glsl  integralImage.glsl  meanAandBPass1.glsl  meanAandBPass2.glsl  test_FullBlockSum.glsl  test_HorizontalBlockSum.glsl  test_average.glsl  test_integralImagePass2.glsl  test_nonWavefront.glsl  test_partialVerticalPrefixSumInSharedMemory.glsl  test_pushconstant.glsl  test_transpose.glsl  test_verticalPrefixSumInSharedMemory.glsl  verticalSumation.glsl
lib/WindowingSystem/: CMakeLists.txt
lib/WindowingSystem/include/: WindowingSystem.h  WindowingSystem.hpp
lib/WindowingSystem/src/: WindowingSystem.cpp
shaders-generator/: package.yaml
shaders-generator/app/: Main.hs
shaders-generator/src/: Common.hs
shaders2headers/: Cargo.toml  build.rs  wrapper.h
shaders2headers/src/: HeaderGeneration.rs  SPV.rs  main.rs
src/: Common.hs  FirstImplem.hs  GuidedFilter.hs  Lib.hs  SimpleIntegralShader.hs  TestShaders.hs
tests/: CMakeLists.txt  basicTest.cpp
